<resources>

    <string name="app_name">Insights Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="str_control">Control</string>
    <string name="str_list_view">(List View)</string>
    <string name="str_grid_view">(Grid View)</string>
    <string name="title_layout_campaign">Products Search</string>
    <string name="title_cart">Cart</string>
    <string name="str_variation">Variation</string>
    <string name="vendor_name" formatted="false">by %s</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="str_signup">Sign up for new account</string>
    <string name="title_variable_campaign">Property</string>
    <string name="title_email">(Email)</string>
    <string name="title_social">(Social Media)</string>
    <string name="title_skip">(Skip)</string>
    <string name="str_skip_and_continue">Skip and Continue</string>
    <string name="price_format" formatted="false">%s%d</string>


    <string name="text_in_stock">\u2022 In Stock</string>
    <string name="text_out_of_stock">\u2022 Out of Stock</string>
    <string name="cod_available">\u2022 Cash on Delivery available</string>
    <string name="cod_not_available">\u2022 Cash on Delivery not available</string>
    <string name="str_available_in">\u2022 Also available in Space Grey and Rose Grey</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="txt_variant" formatted="false">• %s</string>
    <string name="login_success">Login successful</string>
    <string name="login_skipped">Login Skipped</string>
    <string name="choose_campaign">Choose a Campaign</string>
    <string name="settings">Settings</string>
    <string name="clear_data">Clear data</string>
    <string name="str_enter_api_key">Enter API Key</string>
    <string name="error_api_key">Enter a valid API Key</string>
    <string name="api_key_set">API key set</string>
    <string name="title_api_key">API Key &amp; Account ID</string>

    <string name="str_current_api_key" formatted="false">Current\n\nAPI Key: %s\n\nAccount ID: %s</string>
    <string name="confirm">Confirm</string>
    <string name="clear_data_message">Are you sure you want to clear app data?</string>
    <string name="clear_data_negative">Cancel</string>
    <string name="clear_data_positive">Yes</string>
    <string name="data_cleared">Data cleared</string>
    <string name="dialog_house_message">You can use our in-house agents who can help you find a suitable house.</string>
    <string name="dialog_house_title">Use our House Agent!</string>
    <string name="dialog_house_button" formatted="false">Upgrade with %s%d</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="title_favorite">Favorites</string>

    <!--region Login-->
    <string name="title_welcome">Welcome Back</string>
    <string name="text_welcome_message">Make each day your masterpiece.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_enter_api_key_and_account_id">Enter API Key and Account ID</string>
    <string name="title_login">Login</string>
    <string name="title_login_skip">Skip</string>
    <!--endregion-->

    <!--region Settings-->
    <string name="title_general">General</string>
    <string name="title_screen_settings">Screen settings</string>
    <string name="title_show_in_grid">Show in a grid</string>
    <string name="title_grid_size">Grid size</string>
    <string name="title_data_usage">Data usage</string>
    <string name="title_contact_us">Contact us</string>
    <string name="text_vow_info">Thousands of brands across the globe use VWO as their experimentation platform to run A/B tests on their websites, apps and products.</string>
    <string name="advanced">Advanced</string>
    <string name="text_col_count">How many columns to show in grid? (Allowed values 1-3)</string>
    <!--endregion-->

    <!--region Profile -->
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Traditional analytics just show numbers, not the reason behind them. With mobile app session recordings and heatmaps, understand your app user behavior deeply. Identify their struggles, find out why they don’t convert, and even reproduce bugs/errors for faster and proactive debugging. Since you spent so much time reading this, please watch replay on your VWO account now.</string>
    <string name="about_me">About Us</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="title_profile">My Profile</string>
    <!-- endregion -->

    <!--region Registration-->
    <string name="ok">OK</string>
    <string name="str_enter_account_id">Enter account id</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="stop_session_recording">Stop Recording Session</string>
    <!--endregion-->

</resources>
