<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/choose_campaign_menu"
        android:title="@string/choose_campaign">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/title_profile"
                    app:actionViewClass="android.widget.TextView" />
                <item
                    android:id="@+id/nav_layout_campaign"
                    android:title="@string/title_layout_campaign" />
                <item
                    android:id="@+id/nav_onboarding_campaign"
                    android:title="@string/title_variable_campaign" />
                <item
                    android:id="@+id/nav_cart"
                    android:title="@string/title_cart" />
                <item
                    android:id="@+id/nav_favorite"
                    android:title="@string/title_favorite" />
                <item
                    android:id="@+id/nav_stop_session"
                    android:title="@string/stop_session_recording"
                    app:actionViewClass="android.widget.TextView" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/action_clear_data"
                android:title="@string/clear_data"
                android:visible="false" />
            <item
                android:id="@+id/action_enter_api_key"
                android:title="@string/str_enter_api_key"
                android:visible="false" />
        </menu>
    </item>

</menu>
