<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Name">

        <Preference
            android:defaultValue="true"
            android:key="key_Name"
            android:persistent="false"
            android:title="Swapnil Chaudhari" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Email">

        <Preference
            android:defaultValue="true"
            android:key="key_email"
            android:persistent="false"
            android:title="my.email@wingify.com" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Aadhar">

        <Preference
            android:defaultValue="true"
            android:key="key_aadhar"
            android:persistent="false"
            android:title="4575 6541 1348" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Gender">

        <Preference
            android:defaultValue="true"
            android:key="key_gender"
            android:persistent="false"
            android:title="Male" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_screen_settings">

        <SwitchPreference
            android:defaultValue="true"
            android:key="key_show_grid"
            android:title="@string/title_show_in_grid" />
        <EditTextPreference
            android:defaultValue="2"
            android:key="key_col_count"
            android:inputType="number"
            android:title="@string/text_col_count" />

    </PreferenceCategory>

    <PreferenceCategory android:title="About us">

        <Preference android:title="@string/title_contact_us">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://vwo.com/contact-us/" />
        </Preference>

        <Preference
            android:summary="@string/text_vow_info"
            android:title="About VWO" />

    </PreferenceCategory>

</PreferenceScreen>